# ZBar

./: CMakeLists.txt
examples/: processor.cpp
include/: config.h.in
python/: CMakeLists.txt  imagescanner.c  setup.py  zbarmodule.c  zbarmodule.h
python/examples/: scan_image.py
python/test/: test_zbar.py
zbar/: CMakeLists.txt  error.h  processor.h
zbar/processor/: win.c
zbar/window/: win.c
