cmake_minimum_required(VERSION 2.8)

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")

project("zbar")

set(LIB_VERSION_MAJOR 0)
set(LIB_VERSION_MINOR 2)
set(LIB_VERSION_REVISION 0)

set(LT_OBJDIR "${CMAKE_PROJECT_BINARY_DIR}/lib")

set(PACKAGE_NAME "zbar")
set(ZBAR_VERSION_MAJOR 0)
set(ZBAR_VERSION_MINOR 10)
set(VERSION "${ZBAR_VERSION_MAJOR}.${ZBAR_VERSION_MINOR}")

set(PACKAGE_BUGREPORT "spadix@users.sourceforge.net")

set(PACKAGE_STRING "${PACKAGE_NAME} ${VERSION}")
set(PACKAGE_TARNAME ${PACKAGE_NAME})
set(PACKAGE_VERSION ${VERSION})

option(ENABLE_CODE128 "CODE128" ON)
option(ENABLE_CODE39 "CODE39" ON)
option(ENABLE_EAN "EAN" ON)
option(ENABLE_I25 "I25" ON)
option(ENABLE_PDF417 "PDF417" OFF)
option(ENABLE_QRCODE "QRCODE" ON)
option(ENABLE_DATABAR "DATABAR" OFF)
option(ENABLE_CODE93 "CODE93" OFF)
option(ENABLE_CODABAR "CODABAR" OFF)


INCLUDE(CheckIncludeFiles)
CHECK_INCLUDE_FILES(dlfcn.h HAVE_DLFCN_H)
CHECK_INCLUDE_FILES(fcntl.h HAVE_FCNTL_H)
CHECK_INCLUDE_FILES(features.h HAVE_FEATURES_H)
CHECK_INCLUDE_FILES(inttypes.h HAVE_INTTYPES_H)
CHECK_INCLUDE_FILES(iconv.h HAVE_ICONV)
CHECK_INCLUDE_FILES(jpeglib.h HAVE_JPEGLIB_H)
CHECK_INCLUDE_FILES(linux/videodev2.h HAVE_LINUX_VIDEODEV2_H)
CHECK_INCLUDE_FILES(linux/videodev.h HAVE_LINUX_VIDEODEV_H)
CHECK_INCLUDE_FILES(memory.h HAVE_MEMORY_H)
CHECK_INCLUDE_FILES(poll.h HAVE_POLL_H)
CHECK_INCLUDE_FILES(pthread.h HAVE_PTHREAD_H)
CHECK_INCLUDE_FILES(stdint.h HAVE_STDINT_H)
CHECK_INCLUDE_FILES(stdlib.h HAVE_STDLIB_H)
CHECK_INCLUDE_FILES(strings.h HAVE_STRINGS_H)
CHECK_INCLUDE_FILES(string.h HAVE_STRING_H)
CHECK_INCLUDE_FILES(sys/ioctl.h HAVE_SYS_IOCTL_H)
CHECK_INCLUDE_FILES(sys/ipc.h HAVE_SYS_IPC_H)
CHECK_INCLUDE_FILES(sys/mman.h HAVE_SYS_MMAN_H)
CHECK_INCLUDE_FILES(sys/shm.h HAVE_SYS_SHM_H)
CHECK_INCLUDE_FILES(sys/times.h HAVE_SYS_TIMES_H)
CHECK_INCLUDE_FILES(sys/time.h HAVE_SYS_TIME_H)
CHECK_INCLUDE_FILES(sys/types.h HAVE_SYS_TYPES_H)
CHECK_INCLUDE_FILES(unistd.h HAVE_UNISTD_H)
CHECK_INCLUDE_FILES(vfw.h HAVE_VFW_H)
CHECK_INCLUDE_FILES(X11/extensions/XShm.h HAVE_X11_EXTENSIONS_XSHM_H)
CHECK_INCLUDE_FILES(X11/extensions/Xvlib.h HAVE_X11_EXTENSIONS_XVLIB_H)

if (MSVC)
	set(inline ON)
	set(snprintf ON)  #_snprintf
	add_subdirectory("win-iconv")
	include_directories("win-iconv")
	link_directories("${CMAKE_CURRENT_BINARY_DIR}/win-iconv")
endif()


configure_file("${CMAKE_CURRENT_SOURCE_DIR}/include/config.h.in"
			   "${CMAKE_CURRENT_SOURCE_DIR}/include/config.h")

add_subdirectory(zbar)
#add_subdirectory(examples)
add_subdirectory(python)



